# ML

./: .gitignore  .gitmodules  LICENSE  PDL1.ipynb  PDL2.ipynb  PDL3.ipynb  README.md  ds8b.sh  gaokao.ipynb  hf_diffusers.ipynb  hf_flux.ipynb  main.py  pyproject.toml  requirements.txt  tf_cnn.ipynb
aiEnglish/: README.md  background.js  manifest.json  popup.html
data/: big.txt  script-gemini.md  平凡之路.m4a  平凡之路.txt  平凡之路.vtt  海燕.txt
dataset/: spam.txt  x.txt
do-mlx/: README.md
media/: apple.mov  rtmp.sh
notes/: PDL1.ipynb  PDL2.ipynb  PDL3.ipynb  bge-me.ipynb  bitcoin.ipynb  gaokao.ipynb  hf_diffusers.ipynb  hf_flux.ipynb  tf_cnn.ipynb
ollama_playground/: agent.py  ollama_cloud.py  ollama_image.py  tool_calling.py  tools.py  vlm_local.py  web_search.py
ops/: ms_down.sh
or/: hello.py
