[project]
name = "ML"
version = "0.1.0"
description = "My Machine Learning Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
]
